--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="2; url=templates/index.html">
+<meta http-equiv="Refresh" content="2; url=file_uploading/templates/index.html">
